force-app/main/default/objects/GTC_Screening__c/GTC_Screening__c.object-meta.xml
<CustomObject>
    <description>PRDOPS22-105- This object is to maintain restricted party data.
Restricted party data will be downloaded from https://www.trade.gov/consolidated-screening-list site and match at the time of order booking.</description>
    <label>GTC Screening</label>
    <nameField>
        <displayFormat>GTC-{0000000}</displayFormat>
        <label>GTC Screening Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GTC Screenings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>