force-app/main/default/objects/GTC_Screening__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <label>Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>