force-app/main/default/objects/GTC_Screening__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Party_Name__c</columns>
    <columns>CountryCode__c</columns>
    <columns>Upload_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>