force-app/main/default/objects/GTC_Screening__c/listViews/Include.listView-meta.xml
<ListView>
    <fullName>Include</fullName>
    <columns>NAME</columns>
    <columns>Party_Name__c</columns>
    <columns>Type__c</columns>
    <columns>CountryCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Include</value>
    </filters>
    <label>Include</label>
</ListView>